--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="container">
              <div class="row">
                 <div class="about-col-1">
-                    <img src="images\running.JPG" alt="">
+                    <img src="images\User.JPG" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">Achievements</h1>
