--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
              <div class="row">
                 <div class="about-col-1">
-                    <img src="/images/User.JPG" alt="">
+                    <img src="images/User.JPG" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Myself</h1>
@@ -107,7 +107,7 @@
         <div class="container">
              <div class="row">
                 <div class="achieve-col-1">
-                    <img src="/images/VVMC06618.jpg" alt="">
+                    <img src="images/VVMC06618.jpg" alt="">
                 </div>
                 <div class="achieve-col-2">
                     <h1 class="sub-title">Achievements</h1>
