--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#achievements">Achievements</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
 
@@ -35,7 +35,7 @@
         <div class="container">
              <div class="row">
                 <div class="about-col-1">
-                    <img src="images\User.JPG" alt="">
+                    <img src="images/User.JPG" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Myself</h1>
@@ -107,7 +107,7 @@
         <div class="container">
              <div class="row">
                 <div class="about-col-1">
-                    <img src="images\VVMC06618.jpg" alt="">
+                    <img src="images\running.jpg" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">Achievements</h1>
@@ -119,32 +119,37 @@
     </div>
 
 
-    <!-- Contact Section
+    <!-- Contact section -->
     <div id="contact">
-        <div class="row">
-            <div class="contact-left">
-                <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i> contact@example.com</p>
-                <p><i class="fa-solid fa-phone"></i> 1234567890</p>
-                <div class="social-icons">
-                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                </div>
-                <a href="images/User.JPG" download class="button button2">Download CV</a>
-            </div>
+        <div class="container">
+            <div class="row">
+                <div class="contact-left">
+                    <h1 class="sub-title">Contact Me</h1>
+                    <p><i class="fa-sharp fa-regular fa-envelope"></i>&nbsp;contact@example.com</p>
+                    <p><i class="fa-solid fa-phone"></i>&nbsp;0123456789</p>
+                    <div class="social-icons">
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
 
-            <div class="contact-right">
-                <form>
-                    <input type="text" name="name" placeholder="Enter your name" required>
-                    <input type="email" name="email" placeholder="Enter your email" required>
-                    <textarea name rows="6" placeholder="Your Message"></textarea>
-                    <button type="submit" class="button button2">Submit</button>
-                </form>
+                    <a href="images/background3.jpg" class="button btn2" download="">Download CV</a>
+                </div>
+
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="name" placeholder="Enter your Name" required>
+                        <input type="email" name="email" placeholder="Enter your email address" required>
+                        <textarea name="message" rows="10" style="resize: none;" placeholder="Enter Message"></textarea>
+                        <button type="submit" class="button btn2">Submit</button>
+                    </form>
+                </div>
             </div>
         </div>
+        <div class="copyright">
+            <p>Copyright © Durvankur Balkawade</p>
+        </div>    
     </div>
--->
 
 
     <script>
