updated the design

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
 
             <div class="header-text">
-                <h1>Hi, I am <span>Durvankur</span></h1>
+                <h1>Hi, I am <span>Durvankur Balkawade</span></h1>
                 <p>Intern at iLink Digital</p>
             </div>
         </div>
