--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
                     <p><i class="fa-solid fa-phone"></i>&nbsp;0123456789</p>
                     <div class="social-icons">
                         <a href="https://github.com/idurvankurbalkawade"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/durvankur-balkawade-1197a61b3"><i class="fa-brands fa-square-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/durvankur-balkawade-1197a61b3"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
 
-                    <a href="images/background3.jpg" class="button btn2" download="">Download CV</a>
+                    <a href="images/Durvankur Balkawade Resume.pdf" class="button btn2" download="">Download CV</a>
                 </div>
 
                 <div class="contact-right">
