--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
     <!-- achievements section -->
-    <div id="achievements">
+    <div id="achievements" style="background:#000000;">
         <div class="container">
              <div class="row">
                 <div class="about-col-1">
